--- a/shopify.app.poc-gql-storefront.toml
+++ b/shopify.app.poc-gql-storefront.toml
@@ -13,7 +13,7 @@ include_config_on_deploy = true
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = "unauthenticated_read_product_listings,write_products,read_markets"
+scopes = "read_markets,unauthenticated_read_product_listings,write_products"
 
 [auth]
 redirect_urls = [
@@ -25,11 +25,10 @@ redirect_urls = [
 [webhooks]
 api_version = "2024-07"
 
-[pos]
-embedded = false
-
-
 [app_proxy]
 url = "https://humane-fly-tops.ngrok-free.app/api"
 subpath = "prices"
 prefix = "apps"
+
+[pos]
+embedded = false
